# zakura

./: .codespellrc  .dockerignore  .gitignore  .lychee.toml  AGENTS.md  CHANGELOG.md  CHANGELOG_GUIDELINES.md  CHANGELOG_PARAMS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  VERIFY.md  audit.md  deny.toml  feeder.pid  firebase.json  release.toml
fuzz/header-chain/: COVERAGE.md  Cargo.toml  README.md
fuzz/header-chain/corpus/fork_transitions/: aud_01_losing_branch_promotion  crash_reopen  deferred_reevaluation  fork_replacement  linear_growth  operator_cycle  stale_completion  verified_finality
fuzz/header-chain/corpus/header_pursuit/: aud_05_old_network_response  aud_06_late_state_success  aud_07_late_state_failure  corrupt_advisory  disconnected_held_completion  exact_completion  explicit_outcome  held_completion  seventeen_pursuits  stale_generation  stale_held_completion  wrong_ancestry  wrong_target
fuzz/header-chain/corpus/recovery_rows/: malformed_key  mode_migration  mode_migration_rejection  reconstructible_indexes  truncated_authority
fuzz/header-chain/fuzz_dicts/: header_sync.dict
fuzz/header-chain/fuzz_targets/: fork_transitions.rs  header_codec.rs  header_pursuit.rs  recovery_rows.rs
tower-batch-control/: CHANGELOG.md  Cargo.toml
tower-batch-control/src/: lib.rs  message.rs  service.rs  worker.rs
tower-batch-control/tests/: ed25519.rs  worker.rs
tower-fallback/: CHANGELOG.md  Cargo.toml
tower-fallback/src/: service.rs
tower-fallback/tests/: fallback.rs
xtask/: Cargo.toml
xtask/src/: header_conformance.rs  header_fuzz.rs  main.rs
zakura-header-chain/: Cargo.toml  conformance.toml
zakura-header-chain/src/: config.rs  error.rs  frontier.rs  fuzz.rs  graph.rs  ids.rs  lib.rs  locator.rs  node.rs  ownership.rs  retention.rs  validation.rs
zakura-header-chain/src/transition/: authority.rs  invariants.rs  mod.rs  planner.rs  recovery.rs  store.rs  transition-seeds-v1.txt  types.rs
zakura-header-chain/src/validation/: contextual.rs  mod.rs  prepare.rs
zakura-jsonl-trace/: CHANGELOG.md  Cargo.toml
zakura-jsonl-trace/src/: lib.rs
zakura-rpc/: CHANGELOG.md  Cargo.toml  build.rs
zakura-rpc/src/: client.rs  indexer.rs  lib.rs  methods.rs  queue.rs  server.rs  sync.rs
zakura-rpc/src/config/: mining.rs  rpc.rs
zakura-rpc/src/indexer/: methods.rs  server.rs
zakura-rpc/src/indexer/tests/: vectors.rs
zakura-rpc/src/methods/: trees.rs
zakura-rpc/src/methods/tests/: prop.rs  snapshot.rs  utils.rs  vectors.rs
zakura-rpc/src/methods/types/: default_roots.rs  get_block_template.rs  get_blockchain_info.rs  get_mining_info.rs  get_raw_mempool.rs  long_poll.rs  peer_info.rs  submit_block.rs  subsidy.rs  transaction.rs  validate_address.rs  z_validate_address.rs  zec.rs
zakura-rpc/src/queue/tests/: prop.rs
zakura-rpc/src/server/tests/: cookie.rs  vectors.rs
zakura-rpc/src/tests/: vectors.rs
zakura-rpc/tests/: serialization_tests.rs
zakura-rpc/tests/vectors/: getblock_response_1.json
zakura-script/: CHANGELOG.md  Cargo.toml
zakura-script/src/: lib.rs  tests.rs
zakura-state/: CHANGELOG.md  Cargo.toml  build.rs
zakura-state/benches/: transparent_spend_worst_case.rs
zakura-state/proptest-regressions/service/: tests.txt
zakura-state/src/: arbitrary.rs  config.rs  constants.rs  error.rs  header_chain.rs  lib.rs  request.rs  response.rs  service.rs  tests.rs
zakura-state/src/response/: tests.rs
zakura-state/src/service/: arbitrary.rs  block_iter.rs  chain_tip.rs  check.rs  finalized_state.rs  non_finalized_state.rs  pending_utxos.rs  queued_blocks.rs  read.rs  tests.rs  traits.rs  write.rs
zakura-state/src/service/check/: anchors.rs  difficulty.rs  nullifier.rs  utxo.rs
zakura-state/src/service/finalized_state/: arbitrary.rs  commitment_aux.rs  commitment_aux_verify.rs  disk_db.rs  disk_format.rs  header_chain.rs  tests.rs  vct.rs  zakura_db.rs
zakura-state/src/service/non_finalized_state/: backup.rs  chain.rs
zakura-state/src/service/read/: block.rs  difficulty.rs  find.rs  tests.rs  tree.rs  view.rs
zakura-state/src/service/write/: vct_write.rs
zakura-state/src/tests/: setup.rs
zakura-state/tests/: basic.rs
zakura-utils/: CHANGELOG.md  Cargo.toml  README.md  zakurad-log-filter  zcash-rpc-block-template-to-proposal  zcash-rpc-diff
zakura-utils/src/: lib.rs
zakura-utils/tests/: build_utils_for_zakurad_tests.rs
zakurad/: Cargo.toml  build.rs  zcashd-compat-manifest.json
zakurad/src/: application.rs  commands.rs  config.rs  lib.rs  sentry.rs
zakurad/src/commands/: copy_state.rs  entry_point.rs  generate.rs  prune_state.rs  rollback_state.rs  start.rs  tests.rs  tip_height.rs  validate_vct_sprout_history.rs
zakurad/src/components/: health.rs  inbound.rs  mempool.rs  metrics.rs  miner.rs  sync.rs  tokio.rs  tracing.rs
zakurad/src/components/health/: tests.rs
zakurad/src/components/inbound/: downloads.rs  tests.rs
zakurad/src/components/mempool/: config.rs  crawler.rs  downloads.rs  gossip.rs  pending_outputs.rs  storage.rs  tests.rs
zakurad/src/components/sync/: downloads.rs  end_of_support.rs  gossip.rs  legacy_trace.rs  progress.rs  status.rs  tests.rs
zakurad/src/components/tracing/: component.rs  endpoint.rs  otel.rs
zakurad/src/components/zcashd_compat/: config.rs  datadir.rs  managed.rs  manifest.rs  mod.rs  preflight.rs  supervisor.rs
zakurad/systemd/: zakurad.service
zakurad/tests/: acceptance.rs  config.rs  end_of_support.rs  zakura_regtest_e2e.rs
zakurad/tests/common/: cached_state.rs  check.rs  checkpoints.rs  coinbase.rs  config.rs  failure_messages.rs  launch.rs  lightwalletd.rs  mod.rs  regtest.rs  sync.rs  test_type.rs  zcashd_compat.rs
zakurad/tests/common/configs/: getblocktemplate-v1.0.0-rc.1.toml  getblocktemplate-v1.0.0-rc.2.toml  getblocktemplate-v1.0.0-rc.3.toml  getblocktemplate-v1.0.0-rc.4.toml  getblocktemplate-v1.0.0-rc.5.toml  getblocktemplate-v1.0.0-rc.9.toml  getblocktemplate-v1.0.1.toml  v1.0.0-beta.12.toml  v1.0.0-beta.13.toml  v1.0.0-beta.15.toml  v1.0.0-rc.0.toml  v1.0.0-rc.2.toml  v1.0.0-rc.4.toml  v1.0.0-rc.9.toml  v1.0.0-rc0.toml  (+33 more)
(+1269 files in other folders)
