[package]
name = "zakura-tower-batch-control"
version = "1.0.1"
authors.workspace = true
description = "Tower middleware for batch request processing. Internal Zakura fork, published to support cargo install zakura"
# # Legal
#
# This licence is deliberately different to the rest of Zakura.
#
# This code was modified from a 2019 version of:
# https://github.com/tower-rs/tower/tree/master/tower/src/buffer
license = "MIT"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords = ["tower", "batch"]
# Must be one of <https://crates.io/category_slugs>
categories = ["algorithms", "asynchronous"]

[lib]
name = "tower_batch_control"

[dependencies]
futures = { workspace = true }
futures-core = { workspace = true }
pin-project = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "tracing", "macros"] }
tokio-util = { workspace = true }
tower = { workspace = true, features = ["util", "buffer"] }
tracing = { workspace = true }
tracing-futures = { workspace = true }

[dev-dependencies]
color-eyre = { workspace = true }
ed25519-zebra = { workspace = true }
rand = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-test = { workspace = true }
tower-fallback = { package = "zakura-tower-fallback", path = "../tower-fallback/", version = "1.0.1" }
tower-test = { workspace = true }

zakura-test = { path = "../zakura-test/", version = "1.0.1" }

[lints]
workspace = true
