[package]
name = "zakura-tower-fallback"
version = "1.0.0-rc6"
authors.workspace = true
description = "A Tower service combinator that sends requests to a first service, then retries processing on a second fallback service if the first service errors. Internal Zakura fork, published to support cargo install zakura"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords = ["tower", "fallback"]
# Must be one of <https://crates.io/category_slugs>
categories = ["algorithms", "asynchronous"]

[lib]
name = "tower_fallback"

[dependencies]
pin-project = { workspace = true }
tower = { workspace = true }
futures-core = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

zakura-test = { path = "../zakura-test/", version = "1.0.0-rc6" }

[lints]
workspace = true
