[package]
name = "xtask"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2.workspace = true
toml.workspace = true
