[package]
name = "zakura-jsonl-trace"
version = "1.0.0-rc2"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools::debugging"]
edition.workspace = true
rust-version.workspace = true
description = "Shared non-blocking JSONL tracing support for the Zakura node. Internal crate, published to support cargo install zakura"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "sync", "time", "rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
