[package]
name = "zakura-rpc"
version = "4.0.0"
authors.workspace = true
description = "The Zakura node's JSON Remote Procedure Call (JSON-RPC) interface. Internal crate, published to support cargo install zakura"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "../README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = [
    "asynchronous",
    "cryptography::cryptocurrencies",
    "encoding",
    "network-programming",
]

# Exclude proto files so crates.io consumers don't need protoc.
exclude = ["*.proto"]

[features]
# Production features that activate extra dependencies, or extra features in
# dependencies

# Experimental internal miner support
internal-miner = []

# Test-only features
proptest-impl = [
    "proptest",
    "zakura-consensus/proptest-impl",
    "zakura-state/proptest-impl",
    "zakura-network/proptest-impl",
    "zakura-chain/proptest-impl",
]


[dependencies]
chrono = { workspace = true, features = ["clock", "std"] }
futures = { workspace = true }

jsonrpsee = { workspace = true, features = ["server"] }
jsonrpsee-types = { workspace = true }
jsonrpsee-proc-macros = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
serde_with = { workspace = true, features = ["hex"] }
indexmap = { workspace = true, features = ["serde"] }
derive-getters = { workspace = true, features = ["auto_copy_getters"] }
derive-new = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# RPC endpoint basic auth
base64 = { workspace = true }
rand = { workspace = true }
# Constant-time cookie comparison to prevent a timing oracle on RPC auth.
subtle = { workspace = true }

# Error handling
color-eyre = { workspace = true }

tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros", "tracing"] }
tower = { workspace = true }

# gRPC server dependencies
tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
tonic-prost = { workspace = true }
tokio-stream = { workspace = true }

tracing = { workspace = true }

# Metrics collection
metrics = { workspace = true }

hex = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["serde_derive"] }

# For the `stop` RPC method.
nix = { workspace = true, features = ["signal"] }

# For openrpc
openrpsee = { workspace = true }
phf = { workspace = true, features = ["macros"] }
schemars = { workspace = true }

orchard = { workspace = true }
sapling-crypto = { workspace = true }

zcash_address = { workspace = true }
zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
zcash_primitives = { workspace = true, features = ["transparent-inputs", "non-standard-fees"] }
zcash_proofs = { workspace = true }
zcash_protocol = { workspace = true }
zcash_script = { workspace = true }
zcash_transparent = { workspace = true }

# Test-only feature proptest-impl
proptest = { workspace = true, optional = true }

zakura-chain = { path = "../zakura-chain", version = "3.0.0", features = [
    "json-conversion",
] }
zakura-consensus = { path = "../zakura-consensus", version = "4.0.0" }
zakura-network = { path = "../zakura-network", version = "5.0.0" }
zakura-node-services = { path = "../zakura-node-services", version = "2.0.0", features = [
    "rpc-client",
] }
zakura-script = { path = "../zakura-script", version = "2.0.0" }
zakura-state = { path = "../zakura-state", version = "5.0.0" }
rustls = "0.23.40"
tokio-rustls = "0.26.4"
rustls-pemfile = "2.2.0"

[build-dependencies]
openrpsee = { workspace = true }
tonic-prost-build = { workspace = true }
which = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
http-body = { workspace = true }
insta = { workspace = true, features = ["redactions", "json", "ron"] }
anyhow = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }

proptest = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

zakura-chain = { path = "../zakura-chain", version = "3.0.0", features = [
    "proptest-impl",
] }
zakura-consensus = { path = "../zakura-consensus", version = "4.0.0", features = [
    "proptest-impl",
] }
zakura-network = { path = "../zakura-network", version = "5.0.0", features = [
    "proptest-impl",
] }
zakura-state = { path = "../zakura-state", version = "5.0.0", features = [
    "proptest-impl",
] }

zakura-test = { path = "../zakura-test", version = "2.0.0" }

[lints]
workspace = true
