[package]
name = "zakura-script"
version = "1.0.0-rc2"
authors.workspace = true
description = "Zebra script verification wrapping zcashd's zcash_script library"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "../README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[features]
default = []
# Enable a C++/Rust comparison interpreter that runs both the original C++
# implementation and the Rust implementation, and logs a warning if they don't
# match.
comparison-interpreter = []

[dependencies]
libzcash_script = { workspace = true }
zcash_script = { workspace = true }
zcash_primitives = { workspace = true }
zakura-chain = { path = "../zakura-chain", version = "1.0.0-rc2" }

rand = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
lazy_static = { workspace = true }
ripemd = { workspace = true }
secp256k1 = { workspace = true }
sha2 = { workspace = true }
zakura-test = { path = "../zakura-test", version = "1.0.0-rc2" }

[lints]
workspace = true
