[package]
name = "zakura-state"
version = "4.0.0-rc0"
authors.workspace = true
description = "State contextual verification and storage code for the Zakura node. Internal crate, published to support cargo install zakura"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "../README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["asynchronous", "caching", "cryptography::cryptocurrencies"]

[features]

# Production features that activate extra dependencies, or extra features in dependencies

# Exposes narrow internal hooks used by benchmarks.
internal-bench = []

progress-bar = [
    "howudoin",
]

# Indexes spending transaction ids by spent outpoints and revealed nullifiers
indexer = []

# Emit fine-grained per-block commit-phase timing histograms (zakura.state.write.*),
# used to profile and benchmark the finalized-state commit path. Off by default so
# the timing has zero overhead in production builds; enable for perf investigations.
commit-metrics = []

# Test-only features
header-fuzz = []
proptest-impl = [
    "proptest",
    "proptest-derive",
    "zakura-test",
    "zakura-chain/proptest-impl"
]

# Experimental elasticsearch support
elasticsearch = [
    "dep:elasticsearch",
    "dep:serde_json",
    "zakura-chain/elasticsearch",
]

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true, features = ["clock", "std"] }
dirs = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
humantime-serde = { workspace = true }
human_bytes = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
metrics = { workspace = true }
mset = { workspace = true }
regex = { workspace = true }
rlimit = { workspace = true }
rocksdb = { workspace = true, features = ["lz4"] }
semver = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde-big-array = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

rayon = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "tracing", "macros", "time"] }
tower = { workspace = true, features = ["buffer", "util"] }
tracing = { workspace = true }

sapling-crypto = { workspace = true }
zakura-vct-sprout-history = { workspace = true }

# elasticsearch specific dependencies.
# Security: avoid default dependency on openssl
elasticsearch = { workspace = true, features = ["rustls-tls"], optional = true }
serde_json = { workspace = true, optional = true }

zakura-node-services = { path = "../zakura-node-services", version = "2.0.0-rc0" }
zakura-chain = { path = "../zakura-chain", version = "1.2.1-rc0", features = ["async-error"] }
zakura-header-chain = { path = "../zakura-header-chain", version = "1.0.0-rc0" }

# prod feature progress-bar
howudoin = { workspace = true, optional = true }

# test feature proptest-impl
zakura-test = { path = "../zakura-test/", version = "1.0.1-rc0", optional = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
derive-getters.workspace = true
derive-new.workspace = true

[dev-dependencies]
color-eyre = { workspace = true }

once_cell = { workspace = true }
spandoc = { workspace = true }
toml = { workspace = true }

hex = { workspace = true, features = ["serde"] }
insta = { workspace = true, features = ["ron", "redactions"] }
serde_json = { workspace = true }

proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }

halo2 = { package = "halo2_proofs", version = "0.3" }
jubjub = { workspace = true }

tokio = { workspace = true, features = ["full", "tracing", "test-util"] }

zakura-chain = { path = "../zakura-chain", version = "1.2.1-rc0", features = ["proptest-impl"] }
zakura-test = { path = "../zakura-test/", version = "1.0.1-rc0" }

[lints]
workspace = true

[[bench]]
name = "transparent_spend_worst_case"
harness = false
required-features = ["internal-bench"]
