[package]
name = "zakura-utils"
version = "1.0.1"
authors.workspace = true
description = "Developer tools for Zakura maintenance and testing. Internal crate, published to support cargo install zakura"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# zakura-utils has a separate README file
readme = "README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "zakura-checkpoints"
# this setting is required for Zakura's Docker build caches
path = "src/bin/zakura-checkpoints/main.rs"
required-features = ["zakura-checkpoints"]

[[bin]]
name = "zakura-release-state"
path = "src/bin/zakura-release-state/main.rs"
required-features = ["zakura-release-state"]

[[bin]]
name = "search-issue-refs"
path = "src/bin/search-issue-refs/main.rs"
required-features = ["search-issue-refs"]

[[bin]]
name = "block-template-to-proposal"
# this setting is required for Zakura's Docker build caches
path = "src/bin/block-template-to-proposal/main.rs"

[features]
default = []

# Each binary has a feature that activates the extra dependencies it needs

zakura-checkpoints = [
    "itertools",
    "tokio",
    "zakura-chain/json-conversion",
    "zakura-node-services/rpc-client"
]

zakura-release-state = [
    "chrono",
    "serde",
    "sha2",
    "tempfile",
    "zakura-state",
]

search-issue-refs = [
    "regex",
    "reqwest",
    "tokio"
]

[dependencies]
color-eyre = { workspace = true }

structopt = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

zakura-node-services = { path = "../zakura-node-services", version = "1.0.0" }
zakura-chain = { path = "../zakura-chain", version = "1.0.0" }
zakura-state = { path = "../zakura-state", version = "2.0.0", optional = true }

# These crates are needed for the block-template-to-proposal binary
zakura-rpc = { path = "../zakura-rpc", version = "2.0.0" }

# These crates are needed for the zakura-checkpoints binary
itertools = { workspace = true, optional = true }

# These crates are needed for the search-issue-refs binary
regex = { workspace = true, optional = true }
# Avoid default openssl dependency to reduce the dependency tree and security alerts.
reqwest = { workspace = true, features = ["rustls-tls"], optional = true }

# These crates are needed for the zakura-checkpoints and search-issue-refs binaries
tokio = { workspace = true, features = ["full"], optional = true }

zcash_primitives = { workspace = true, optional = true }
zcash_protocol.workspace = true

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
