[package]
name = "zakura-utils"
version = "1.1.0"
authors.workspace = true
description = "Developer tools for Zakura maintenance and testing. Internal crate, published to support cargo install zakura"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

# zakura-utils has a separate README file
readme = "README.md"
homepage.workspace = true
# crates.io is limited to 5 keywords and categories
keywords.workspace = true
# Must be one of <https://crates.io/category_slugs>
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[lib]
test = false

[[bin]]
name = "zakura-checkpoints"
# this setting is required for Zakura's Docker build caches
path = "src/bin/zakura-checkpoints/main.rs"
required-features = ["zakura-checkpoints"]

[features]
default = []

# Each binary has a feature that activates the extra dependencies it needs

zakura-checkpoints = [
    "itertools",
    "tokio",
    "zakura-chain/json-conversion",
    "zakura-node-services/rpc-client"
]

# Adds the offline export mode to the zakura-checkpoints binary. Kept separate
# so RPC-only builds don't compile the state database stack.
zakura-checkpoints-offline = [
    "zakura-checkpoints",
    "zakura-state"
]

# Preserve published feature names after removing the obsolete developer tools.
search-issue-refs = [
    "regex",
    "reqwest",
    "tokio"
]
regex = []
reqwest = []

[dependencies]
color-eyre = { workspace = true }

structopt = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

zakura-node-services = { path = "../zakura-node-services", version = "2.0.0" }
zakura-chain = { path = "../zakura-chain", version = "2.0.0" }

# These crates are needed for the zakura-checkpoints binary
itertools = { workspace = true, optional = true }

# This crate is needed for the zakura-checkpoints offline export mode
zakura-state = { path = "../zakura-state", version = "4.0.0", optional = true }

# This crate is needed for the zakura-checkpoints binary
tokio = { workspace = true, features = ["full"], optional = true }

zcash_primitives = { workspace = true, optional = true }
zcash_protocol.workspace = true

[lints]
workspace = true
